@startuml
class DiscussionCli <<root>> {
    ' so many args, omitted for sanity
    @Inject DiscussionCli(...)
}

DiscussionCli ---> ExitHandler
DiscussionCli ----> ATAUserHandler
DiscussionCli ---> LoginHandler
DiscussionCli ---> ViewTopicsHandler
DiscussionCli ---> CreateTopicHandler
DiscussionCli ---> ViewTopicMessagesHandler
DiscussionCli ---> ChangeTopicHandler
DiscussionCli ---> CreateTopicMessageHandler
DiscussionCli -> DiscussionCliState

' ExitHandler (has default constructor, needs explicit no-arg constructor
' to be added)
class ExitHandler {
    @Inject ExitHandler()
}
note bottom: Requires explicitly adding\nno-arg constructor to class

' ChangeTopicHandler
class ChangeTopicHandler {
    @Inject ChangeTopicHandler(ATAUserHandler)
}
ChangeTopicHandler --> ATAUserHandler

' CreateTopicHandler
class CreateTopicHandler {
    @Inject CreateTopicHandler(TopicDao, ATAUserHandler)
}
CreateTopicHandler --> TopicDao
CreateTopicHandler --> ATAUserHandler

' CreateTopicMessageHandler
class CreateTopicMessageHandler {
    @Inject CreateTopicMessageHandler(ATAUserHandler, TopicMessageDao)
}
CreateTopicMessageHandler --> ATAUserHandler
CreateTopicMessageHandler --> TopicMessageDao

' LoginHandler
class LoginHandler {
    @Inject LoginHandler(MemberDao memberDao, ATAUserHandler userHandler)
}
LoginHandler --> MemberDao
LoginHandler --> ATAUserHandler

' ViewTopicMessagesHandler
class ViewTopicMessagesHandler {
    @Inject ViewTopicMessagesHandler(TopicMessageDao topicMessageDao)
}
ViewTopicMessagesHandler --> TopicMessageDao

' ViewTopicsHandler
class ViewTopicsHandler {
    @Inject ViewTopicsHandler(TopicDao topicDao, ATAUserHandler userHandler)
}
ViewTopicsHandler --> TopicDao
ViewTopicsHandler --> ATAUserHandler

' MemberDao
class MemberDao {
    @Inject MemberDao(DynamoDBMapper)
}
MemberDao --> DynamoDBMapper

' TopicDao
class TopicDao {
    @Inject TopicDao(DynamoDBMapper)
}
TopicDao --> DynamoDBMapper

' TopicMessageDao
class TopicMessageDao {
    @Inject TopicMessageDao(DynamoDBMapper)
}
TopicMessageDao --> DynamoDBMapper

' DiscussionCliState (has default construtor, needs explicit no-arg
' constructor
class DiscussionCliState {
    @Inject DiscussionCliState()
}
note right: Requires explicitly adding\nno-arg constructor to class

' DynamoDBMapper : not a class under our control
class DynamoDBMapper <<@Provides>> <<@Singleton>>
note left: Not under our control, so \nmust use @Provides
note right of DynamoDBMapper: Only need one mapper for everyone

' ATAUserHandler : not a class under our control
class ATAUserHandler <<@Provides>> <<@Singleton>>
@enduml